[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/Quiz/mathchallengeui.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/RewardUI.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Header-dinrundschriftmittel.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/Quiz/answerbox.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Icon/item_potion.tres" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 108
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="RewardCanvas" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="RewardUI" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1170.0
margin_top = -540.0
margin_right = 1170.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="RewardUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -934.0
margin_top = -503.5
margin_right = 934.0
margin_bottom = 373.5
texture_progress = ExtResource( 1 )
fill_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="VBoxContainer" parent="RewardUI/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -292.5
margin_right = 275.0
margin_bottom = -183.5
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RewardUI/TextureProgress/Desc"]
margin_right = 550.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "You have found"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="Control" parent="RewardUI/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -92.0
margin_right = -13.5
margin_bottom = -92.0
rect_scale = Vector2( 4, 4 )

[node name="TextureRect" type="Sprite" parent="RewardUI/TextureProgress/Item"]
texture = ExtResource( 5 )

[node name="ItemName" type="Label" parent="RewardUI/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -934.0
margin_top = 5.0
margin_right = 934.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "Healing Potion"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="RewardUI/TextureProgress"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -275.0
margin_top = -279.0
margin_right = 275.0
margin_bottom = -156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="RewardUI/TextureProgress/CenterContainer"]
margin_left = 46.0
margin_right = 504.0
margin_bottom = 123.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="RewardUI/TextureProgress/CenterContainer/Ok"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Ok"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="RewardUI"]
[connection signal="pressed" from="RewardUI/TextureProgress/CenterContainer/Ok" to="." method="_on_Ok_pressed"]
